{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "GameMap",
            "id": "a7e92c76-eda9-4480-8dda-04b96a804b1e",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "f307913b-225b-450c-a2a9-15aae1d8355a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FastAttack",
                    "type": "Button",
                    "id": "5f960b5c-695e-49bc-8724-0444f48342e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StrongAttack",
                    "type": "Button",
                    "id": "493a2e8d-9dff-4754-a684-a44110972f7d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2d Vector",
                    "id": "5da55818-89ab-4445-93f8-c122c6f84222",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "494eb0ba-751e-4163-942f-acfbddf8a557",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5fb42615-04d5-4d2a-9803-dabceefc7b07",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6ff09ee9-260d-4121-9bd1-a22cf07d749b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "cdd547d5-d9c8-4840-91c5-1fabe3aae771",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "02057d9f-e2b9-4c1c-8499-704cf4d098b1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FastAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd9ce1ca-b55b-42ca-95b8-8bdf2af33023",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StrongAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}